completed Readme.md

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 							<div class="inner">
 								<h4 class="sunPg">Start-Up-Nation 2022</h4>
 								<p>Finantare nerambursabila maxim <strong>200.000 lei</strong> pentru 2 angajati sau
-									<strong>100.000 lei</strong> pentru un angajat.</p>
+									<strong>100.000 lei</strong> pentru un angajat.
+								</p>
 								<ul class="cofinantare">
 									<li>Cofinantare proprie: minim 15%</li>
 									<li>Beneficiari eligibili: Firmele noi infiintate si Firmele infiintate dupa
@@ -126,7 +127,8 @@
 							<div class="inner">
 								<h4>Femeia antreprenor</h4>
 								<p>Finantare nerambursabila maxim <strong>200.000 lei</strong> pentru 2 angajati sau
-									<strong>100.000 lei</strong> pentru un angajat.</p>
+									<strong>100.000 lei</strong> pentru un angajat.
+								</p>
 								<ul class="cofinantare">
 									<li>Cofinantare proprie: minim 15%</li>
 									<li>Beneficiari eligibili: Microintreprinderi sau IMM-uri; cel putin unul din
